<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".DetailActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_role"
            style="@style/Title.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/role"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/Title.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/agents_name"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_role"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_strenght_weaknesses"
            style="@style/Title.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/strenght_weaknesses"
            app:layout_constraintStart_toStartOf="@+id/tv_item_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_description" />

        <TextView
            android:id="@+id/tv_description_strenght"
            android:layout_width="270dp"
            android:layout_height="149dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/desktripsi_kelebihan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_strenght_weaknesses" />

        <TextView
            android:id="@+id/tv_strenght"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kelebihan"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strenght_weaknesses"
            app:layout_constraintTop_toBottomOf="@+id/tv_strenght_weaknesses" />

        <TextView
            android:id="@+id/tv_weaknesses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/kekurangan"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strenght"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_strenght" />


        <TextView
            android:id="@+id/tv_description_weaknesses"
            android:layout_width="270dp"
            android:layout_height="148dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="8dp"
            android:text="@string/desktripsi_kekurangan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_strenght" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="101dp" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_weaknesses" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="848dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
